# libgudev

./: .gitignore  .gitlab-ci.yml  Makefile.am  Makefile.decl  NEWS  README  README.md  autogen.sh  configure.ac  libgudev-1.0.sym  libgudev.doap  meson.build  meson_options.txt
.ci/: check-abi
docs/: .gitignore  GUdev.toml.in  Makefile.am  gudev-docs.xml  gudev-sections.txt  meson.build  urlmap.js
gudev/: gudev.h  gudevclient.c  gudevclient.h  gudevdevice.c  gudevdevice.h  gudevenumerator.c  gudevenumerator.h  gudevenums.h  gudevenumtypes.c.template  gudevenumtypes.h.template  gudevprivate.h  gudevtypes.h  meson.build
tests/: Makefile.am  meson.build  test-double.c  test-enumerator-filter.c  test-gudevdevice.c  test-sysfsattr.c
